--- a/cjpm.toml
+++ b/cjpm.toml
@@ -2,7 +2,7 @@
 
 [package]
   cjc-version = "0.60.5"
-  compile-option = ""
+  compile-option = "--debug-macro"
   description = "nothing here"
   link-option = ""
   name = "thunderlang"
