实现标识符

--- a/cjpm.toml
+++ b/cjpm.toml
@@ -1,8 +1,9 @@
 [dependencies]
+  iota4cj = { git="https://github.com/gtn1024/iota4cj.git", tag="1.0.0" }
 
 [package]
   cjc-version = "0.60.5"
-  compile-option = ""
+  compile-option = "--debug-macro"
   description = "nothing here"
   link-option = ""
   name = "thunderlang"
